css/style.css
/* ... */
nav ul li:hover {
    transform: scale(1.05); /* Increase the size by 10% on hover (you can adjust this as needed) */
    opacity: 1;
}

.for_social_icons {
    display: inline;
    cursor: pointer;
} 

.for_social_icons:hover {
    transform: scale(1.05); /* Increase the size by 10% on hover (you can adjust this as needed) */
    opacity: 1;
} 

label #btn,
label #cancel {
    color: white;
    font-size: 30px;
    float: right;
    line-height: 91px;
    margin-right: 40px;
    cursor: pointer;
    display: none;
}

#check {
    display: none;
}

.img_face {
    display: flex;
    justify-content: center; /* Horizontally center */
    align-items: center; /* Vertically center */
    margin-top: 7px;
}

.links {
    color: #264d3b;
    font-weight: 700;
    cursor: pointer;
}

.links:hover {
    color: #cce3ed;
    font-size: large;
    
}

article {
    line-height: 2.5rem;
    font-size: 1.1rem;
}

.exp_settings {
    font-family: fantasy;
    letter-spacing: 1.5rem;
    font-size: 100px;
    text-align: center;
}

.skills_icon {
    height: 150px;
}

.skills_icon:hover {
    transform: scale(1.15); /* Increase the size by 10% on hover (you can adjust this as needed) */
    opacity: 1;
}

.last_skills_icon {
    height: 150px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto; /* Center horizontally using margin */
}

.container_content {
    width: 50%;
}

.container_content_inner {
width: 80%;
margin-left: 80px;
}

.container_outer_img {
margin: 50px;
width: 50%;
overflow: hidden;
}   
    
.container_img {
width: 35%;
animation: slideIn 1.5s ease-in-out forwards;

}

.title {
overflow: hidden;
height: auto;
}

.feedback-input {
    color:rgb(0, 0, 0);
    font-family: Helvetica, Arial, sans-serif;
    font-weight:500;
    font-size: 18px;
    border-radius: 5px;
    line-height: 22px;
    background-color: transparent;
    border:2px solid #0272b8c1;
    transition: all 0.3s;
    padding: 13px;
    margin-bottom: 15px;
    width:100%;
    box-sizing: border-box;
    outline:0;
    margin-left: -150px;
}

.feedback-input:focus { border:2px solid #0272b8c1; }

form { max-width:420px; margin:50px auto; }

[type="submit"] {
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    width: 100%;
    background:#0272b8c1;
    border-radius:5px;
    border:0;
    cursor:pointer;
    color:rgb(0, 0, 0);
    font-size:24px;
    padding-top:10px;
    padding-bottom:10px;
    transition: all 0.3s;
    margin-top:-4px;
    font-weight:700;
    margin-left: -150px;
  }
  [type="submit"]:hover { background:#0272b8c1; }

.btns {
    height: 100%;
    position: relative;
    width: 150px;
    overflow: hidden;
}

.btns_more {
    background: transparent;
    border: 1px solid var(--contrast-color);
    border-radius: 50px;
    padding: 8px 12px;
    color: #BF307F;
    font-size: 16px;
    text-transform: uppercase;
    position: relative;
    margin-top: 15px;
    outline: none;
    transform: translateY(50px);
    animation: slideUp .8s ease-in-out  forwards 1s;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    z-index: -10;
    background-color: var(--contrast-color);
}

.h-divider {
    margin: auto;
    margin-top: 80px;
    width: 80%;
    position: relative;
}
  
.h-divider .shadow {
    overflow: hidden;
    height: 20px;
}
  
.h-divider .shadow:after {
    content: '';
    display: block;
    margin: -25px auto 0;
    width: 100%;
    height: 25px;
    border-radius: 125px/12px;
    box-shadow: 0 0 8px black;
}

/* Main page separator see code below */

.separator {
    border: none;
    height: 2px; /* Adjust the thickness of the line as needed */
    background-color: #ccc; /* Line color */
    margin: 20px 0; /* Adjust the margin as needed to control the spacing */
}

.colour-block {
    background:#3D474D;
    width:60%;
    padding:7% 20% 10% 20%;
    color:#fff;
}

.white-block {
    background:#fff;
    width:60%;
    padding:7% 20% 10% 20%;
    color:#3D474D;
}
  
  /*------------------*/
  /*  SKEW CLOCKWISE  */
  /*------------------*/
.skew-cc{
    width:100%;
    height:100px;
    position:relative;
    left:0px;
    background: linear-gradient(to right bottom, #3D474D 49%, #fff 50%),    linear-gradient(-50deg, #ffffff 16px, #000 0);
}
  
  /*-------------------------*/
  /* SKEW COUNTER CLOCKWISE  */
  /*-------------------------*/
.skew-c{
    width:100%;
    height:100px;
    position:relative;
    left:0px;
    background: linear-gradient(to left bottom, #fff 49%, #3D474D 50%);
}

/* ------- Main page separator see code above------------ */

/* ------- Footer css code css below------------ */

.footer-distributed{
	background: #ffffff;
	box-shadow: 0 1px 1px 0 #3D474D;
	box-sizing: border-box;
	width: 100%;
	text-align: left;
	font: bold 16px sans-serif;
	padding: 55px 50px;
}

.footer-distributed .footer-left,
.footer-distributed .footer-center,
.footer-distributed .footer-right{
	display: inline-block;
	vertical-align: top;
}

/* Footer left */

.footer-distributed .footer-left{
	width: 40%;
}

.footer-left img {
    cursor: pointer;
}

/* The company logo */

.footer-distributed h3{
	color:  #3D474D;
	font: normal 36px 'Open Sans', cursive;
	margin: 0;
    cursor: pointer;
}

.footer-distributed h3 span{
	color:  lightseagreen;
}

/* Footer links */

.footer-distributed .footer-links{
	color:  #3D474D;
	margin: 20px 0 12px;
	padding: 0;
}

.footer-distributed .footer-links a{
	display:inline-block;
	line-height: 1.8;
  font-weight:400;
	text-decoration: none;
	color:  inherit;
}

.footer-distributed .footer-company-name{
	color:  #222;
	font-size: 14px;
	font-weight: normal;
	margin: 0;
}

/* Footer Center */

.footer-distributed .footer-center{
	width: 35%;
}
/* ... */

